add new content and changed in design

--- a/index.html
+++ b/index.html
@@ -40,20 +40,21 @@
         <div class="my-name home-my-name">Avinash Singh</div>
         <div class="home-home">
             <div class="home-left">
-                    <p class="home-p1">Hi! Avinash Singh</p>
+                    <p class="home-p1">Hi! Avinash Kumar Singh</p>
                     <p class="home-p2">I am a/an <span class="changing-role"></span></p>
-                    <p class="home-p3">I am a software developer with 'MERN'. I love the combination of business and
-                        thechnology and i really enjoy my life.</p>
-                    <button id="home-button" class="button">Hire Me</button>
+                    <p class="home-p3">Aspiring Full Stack Web Developer with a strong foundation in both front-end
+                        and back-end technologies. Eager to leverage project experience and
+                        technical skills to contribute to innovative web development projects. .</p>
+                    <button onclick="resumeDownloadBtn()" id="home-button" class="button">My Resume</button>
             </div>
             <div class="home-right">
                 <div class="home-img">
                     <div class="my-img">
                         <img src="Img/my-img.jpg" alt="myphoto">
                     </div>
-                    <img src="Img/cube.png" alt="cube" class="cube">
-                    <img src="Img/circle.png" alt="img" class="circle">
-                    <img src="Img/plua.png" alt="img" class="plus">
+                    <img src="Img/cube_icon.svg" alt="cube" class="cube">
+                    <img src="Img/circle_icon.svg" alt="img" class="circle">
+                    <img src="Img/plus_icon.svg" alt="img" class="plus">
                     <img src="Img/curve.png" alt="img" class="curve">
                     <img src="Img/dots.png" alt="img" class="dots">
                 </div>
@@ -71,20 +72,17 @@
                     <div class="project1-num project-num">01</div>
                     <div class="project1-info project-info">
                         <div class="project-img">
-                            <img src="Img/js.jpg">
-                            <img src="Img/ruby.png">
-                            <img src="Img/c.png">
-                            <img src="Img/react.png">
-                            <img src="Img/html-removebg-preview.png">
-                            <img src="Img/node-removebg-preview.png">
+                            <img src="Img/react_icon.svg">
+                            <img src="Img/postgres_icon.svg">
+                            <img src="Img/ts_icon.svg">
+                            <img src="Img/js_icon.svg">
+                            <img src="Img/prisma_icon.svg">
+                            <img src="Img/node_icon.svg">
                         </div>
-                        <div class="project-head">Tint & Orange</div>
-                        <div class="project-para">Lorem ipsum dolor sit amet consectetur adipisicing elos
-                            consequatur! natus possimus?</div>
+                        <div class="project-head">Medium Blog App</div>
+                        <div class="project-para">Developed a blog application with user authentication, blog creation and reading blogs section features</div>
                         <div class="project-btn">
-                            <button id="project-btn" class="button">Read More</button>
-                            <img src="Img/github1.png">
-                            <img src="Img/instagram.png">
+                            <button onclick="project_btn1Click()" id="project-btn1" class="button project_btn">Visit</button>
                         </div>
                     </div>
                 </div>
@@ -92,20 +90,16 @@
                     <div class="project2-num project-num">02</div>
                     <div class="project2-info project-info">
                         <div class="project-img">
-                            <img src="Img/js.jpg">
-                            <img src="Img/ruby.png">
-                            <img src="Img/c.png">
-                            <img src="Img/react.png">
-                            <img src="Img/html-removebg-preview.png">
-                            <img src="Img/node-removebg-preview.png">
+                            <img src="Img/next_icon.svg">
+                            <img src="Img/ts_icon.svg">
+                            <img src="Img/react_icon.svg">
+                            <img src="Img/tailwind_icon.svg">
+                            <img src="Img/js_icon.svg">
                         </div>
-                        <div class="project-head">Tint & Orange</div>
-                        <div class="project-para">Lorem ipsum dolor sit amet consectetur adipi
-                            consequatur! natus possimus?</div>
+                        <div class="project-head">Cookie Auth App</div>
+                        <div class="project-para">Implement authentication in Next.js application using cookies with email sending and forgot password features.</div>
                         <div class="project-btn">
-                            <button id="project-btn" class="button">Read More</button>
-                            <img src="Img/github1.png">
-                            <img src="Img/instagram.png">
+                            <button onclick="project_btn2Click()" id="project-btn2" class="button project_btn">Visit</button>
                         </div>
                     </div>
                 </div>
@@ -113,20 +107,14 @@
                     <div class="project3-num project-num">03</div>
                     <div class="project3-info project-info">
                         <div class="project-img">
-                            <img src="Img/js.jpg">
-                            <img src="Img/ruby.png">
-                            <img src="Img/c.png">
-                            <img src="Img/react.png">
-                            <img src="Img/html-removebg-preview.png">
-                            <img src="Img/node-removebg-preview.png">
+                            <img src="Img/html_icon.svg">
+                            <img src="Img/css_icon.svg">
+                            <img src="Img/js_icon.svg">
                         </div>
-                        <div class="project-head">Tint & Orange</div>
-                        <div class="project-para">Lorem ipsum dolor sit amet consectetur adipis
-                            consequatur! natus possimus?</div>
+                        <div class="project-head">Tic Tac Toe</div>
+                        <div class="project-para">Developed a tic tac toe game in pure html css and javascript</div>
                         <div class="project-btn">
-                            <button id="project-btn" class="button">Read More</button>
-                            <img src="Img/github1.png">
-                            <img src="Img/instagram.png">
+                            <button onclick="project_btn3Click()" id="project-btn" class="button project_btn">Visit</button>
                         </div>
                     </div>
                 </div>
@@ -134,20 +122,15 @@
                     <div class="project4-num project-num">04</div>
                     <div class="project4-info project-info">
                         <div class="project-img">
-                            <img src="Img/js.jpg">
-                            <img src="Img/ruby.png">
-                            <img src="Img/c.png">
-                            <img src="Img/react.png">
-                            <img src="Img/html-removebg-preview.png">
-                            <img src="Img/node-removebg-preview.png">
+                            <img src="Img/js_icon.svg">
+                            <img src="Img/html_icon.svg">
+                            <img src="Img/css_icon.svg">
+                            <img src="Img/node_icon.svg">
                         </div>
-                        <div class="project-head">Tint & Orange</div>
-                        <div class="project-para">Lorem ipsum dolor sit amet consectetur adipisios
-                            consequatur natus possimus?</div>
+                        <div class="project-head">Todo List App</div>
+                        <div class="project-para">A simple yet elegant ToDo List web application that leverages browser localStorage to save your tasks.</div>
                         <div class="project-btn">
-                            <button id="project-btn" class="button">Read More</button>
-                            <img src="Img/github1.png">
-                            <img src="Img/instagram.png">
+                            <button onclick="project_btn4Click()" id="project-btn" class="button project_btn">visit</button>
                         </div>
                     </div>
                 </div>
@@ -164,35 +147,28 @@
                         <p>My Tech Stack</p>
                     </div>
                     <div class="skill-desc">
-                        <p>Hi Everyone, My name is Avinash Singh. I am a full stack web developer. I have been working
-                            for last three years and Currently I am working witha Budding Start-Up in USA and a full
-                            Time Freelancer. Currently i am working on my project</p>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia rem necessitatibus hic,
-                            iure repellendus soluta distinctio atque, odit pariatur explicabo magni iste minima laborum!
-                            Optio cumque doloremque provident repellat quas!</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat fuga voluptatem odio
-                            distinctio doloree autem, commodi iure quas, velit magnam incidunt illo. Quas, incidunt.</p>
+                        <p>Hi Everyone, My name is Avinash Singh. I am a self-taught full stack web developer whose day starts with writing code and ends with seeing the magic in it. I am a student of technology and i always will be. 
+                        </p>
+                        <p>I know so many technologies like <b>Nextjs, Reactjs, Tailwind, PostgreSQL, Prisma, Recoil, Express, Hono, Mongo, Mongoose, Typescript, javascript, Zod, Bcryptjs, JsonWebTokens, Postman, Git & Github.</b></p>
+                        <p>I am deeply passionate about exploring new technologies and constantly expanding my knowledge. Learning is my driving force, and I thrive on discovering innovative solutions. My enthusiasm for software development fuels my journey towards excellence.</p>
                     </div>
             </div>
             <div class="skill-right">
                 <div class="skill-photo">
                     <div class="move_bubble"></div>
                     <div class="skill-img">
-                        <img src="Img/java.png">
-                        <img src="Img/c.png">
-                        <img src="Img/css.png">
-                        <img src="Img/express.png">
-                        <img src="Img/git.png">
-                        <img src="Img/html-removebg-preview.png">
-                        <img src="Img/ruby.png">
-                        <img src="Img/go.png">
-                        <img src="Img/cplus.png">
-                        <img src="Img/js.jpg">
-                        <img src="Img/react.png">
-                        <img src="Img/node-removebg-preview.png">
-                        <img src="Img/github.png">
-                        <img src="Img/python.png">
-                        <img src="Img/circle.png">
+                        <img src="Img/ts_icon.svg">
+                        <img src="Img/css_icon.svg">
+                        <img src="Img/next_icon.svg">
+                        <img src="Img/prisma_icon.svg">
+                        <img src="Img/git_icon.svg">
+                        <img src="Img/html_icon.svg">
+                        <img src="Img/js_icon.svg">
+                        <img src="Img/react_icon.svg">
+                        <img src="Img/mongo_icon.svg">
+                        <img src="Img/node_icon.svg">
+                        <img src="Img/github_icon.svg">
+                        <img src="Img/postgres_icon.svg">
                     </div>
                 </div>
             </div>
@@ -205,15 +181,15 @@
                 <p class="contact-head">Contact Me</p>
                 <p class="contact-para">Questions, Thoughts, Or Just Want to Say Hello?</p>
             </div>
-                <form>
+                <div class="form">
                     <input placeholder="Enter your name" type="text" autocomplete="off" name="name" id="name">
                     <input placeholder="Enter your e-mail" type="email" autocomplete="off" name="email" id="email">
                     <input placeholder="Enter your subject" type="text" name="subject" id="subject">
                     <textarea placeholder="Enter Your Message" name="query" id="query"></textarea>
-                    <button id="contact-button" class="button">Send Message
-                        <img src="Img/message-icon.png">
+                    <button onclick="sendMessageBtnClick()" id="contact-button" class="button">Send Message
+                        <img src="Img/send_icon.svg">
                     </button>
-                </form>
+                </div>
         </div>
     </section>
 
@@ -226,10 +202,8 @@
                 <a class="color_black" href="#contact">Contact-Me</a>
             </div>
             <div class="footer-socialMedia">
-                <a target="_blank" href="https://twitter.com"><img src="Img/twitter.png"></a>
-                <a target="_blank" href="https://instagram.com"><img src="Img/instagram.png"></a>
-                <a target="_blank" href="https://github.com"><img src="Img/github.png"></a>
-                <a target="_blank" href="https://www.linkedin.com/login"><img src="Img/linkdin.png"></a>
+                <a target="_blank" href="https://github.com/avinashsinghwk"><img src="Img/github_icon.svg"></a>
+                <a target="_blank" href="https://www.linkedin.com/in/avinash-singh-a27769239"><img src="Img/linkdin_icon.svg"></a>
 
             </div>
         </div>
@@ -244,7 +218,7 @@
 <!-- Setup and start animation! -->
 <script>
     var typed = new Typed('.changing-role', {
-        strings: ['Mern Develper', 'Programmer', 'Entrepreneur', 'Backend Develper', 'Coder'],
+        strings: ['Mern Develper', 'Programmer', 'Backend Develper', 'Coder'],
         typeSpeed: 100,
         backSpeed: 60,
         loop: true,
